# neural_network

./: CMakeLists.txt  README.md
src/: ActivationFunction.cpp  ActivationFunction.h  Dataset.cpp  Dataset.h  Matrix.cpp  Matrix.h  Network.cpp  Network.h  main.cpp
